--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,10 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.1",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "react-table-6": "^6.11.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
