--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,7 @@ COPY ./package.json ./
 COPY ./package-lock.json ./
 
 RUN npm install
+RUN npm install express body-parser cors mongoose nodemon
 
 COPY . .
 
